--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
     - PYTHON: "C:/Python34"
 
 install:
-  - git clone git@github.com:zalanyib/leveldb-mingw.git
+  - "git clone https://github.com/zalanyib/leveldb-mingw.git"
   - cd leveldb-mingw
   - mingw32-make
   # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
