--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,8 @@ install:
   - "git clone https://github.com/zalanyib/leveldb-mingw.git"
   - cd leveldb-mingw
   - set PATH=%PATH%;C:\MinGW\msys\1.0\bin;C:\MinGW\bin
-  - ps: "Get-ChildItem -path C:/MinGW/msys/1.0/bin -recurse"
-  - ps: "Get-ChildItem -path C:/MinGW/bin -recurse"
   - mingw32-make
+  - ps: "Get-ChildItem -path . -recurse"
   # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
   # - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
   # - "%PYTHON%/python.exe C:/get-pip.py"
