--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,23 +10,16 @@ install:
   - cd leveldb-mingw
   - set PATH=%PATH%;C:\MinGW\msys\1.0\bin;C:\MinGW\bin
   - mingw32-make
-  - ps: "Get-ChildItem -path . -recurse"
-  # - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
-  # - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
-  # - "%PYTHON%/python.exe C:/get-pip.py"
-  # - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
-  # - "git clone https://github.com/onitu/leveldb.git"
-  # - "cd leveldb/"
-  # - ps: "Get-ChildItem -path C:/Libraries/boost -recurse"
-  # - cmake . -G "Visual Studio 9 2008" -DBOOST_ROOT="C:/Libraries/boost" -DBOOST_LIBRARYDIR="C:/Libraries/boost/lib32-msvc-12.0"
-  # - "msbuild leveldb.sln"
-  # - ps: "Get-ChildItem -path . -recurse"
-  # - "cp Debug/leveldbd.lib %PYTHON%/libs/leveldb.lib"
-  # - "cp port/win/stdint.h %PYTHON%/Include"
-  # - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
-  # - ps: "Copy-Item C:/Libraries/boost/stage/lib/*.lib $Env:PYTHON/libs/"
-  # - "cd ../"
-  # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
+  - ps: (new-object net.webclient).DownloadFile('https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe', 'C:/pywin32-219.win32-py2.7.exe')
+  - ps: (new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')
+  - "%PYTHON%/python.exe C:/get-pip.py"
+  - "%PYTHON%/Scripts/easy_install.exe C:/pywin32-219.win32-py2.7.exe"
+  - "cp leveldb.lib leveldb.dll %PYTHON%/libs/"
+  - "cp port/win/stdint.h %PYTHON%/Include"
+  - ps: "Copy-Item include/leveldb $Env:PYTHON/Include -recurse"
+  - "cd ../"
+  - ps: "New-Item -path $Env:PYTHON/Lib/ -Name distutils.cfg -Value '[build]\n\rcompiler=mingw32' -ItemType file -force"
+  - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
 
 build: off
 deploy: off
