--- a/onitu/gui/windows-extension/MyIconOverlayHandlers/MyIconOverlayHandlersAdded/MyIconOverlayHandlersAdded.csproj
+++ b/onitu/gui/windows-extension/MyIconOverlayHandlers/MyIconOverlayHandlersAdded/MyIconOverlayHandlersAdded.csproj
@@ -72,6 +72,11 @@
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\AMyIconOverlayHandlersBase.dll" "$(SolutionDir)\..\bin"
+xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\AMyIconOverlayHandlersAdded.dll" "$(SolutionDir)\..\bin"
+xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\Newtonsoft.Json.dll" "$(SolutionDir)\..\bin"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
