remove postbuildevents / change output directory

--- a/onitu/gui/windows-extension/MyIconOverlayHandlers/MyIconOverlayHandlersAdded/MyIconOverlayHandlersAdded.csproj
+++ b/onitu/gui/windows-extension/MyIconOverlayHandlers/MyIconOverlayHandlersAdded/MyIconOverlayHandlersAdded.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -73,9 +73,8 @@
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\AMyIconOverlayHandlersBase.dll" "$(SolutionDir)\..\bin"
-xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\AMyIconOverlayHandlersAdded.dll" "$(SolutionDir)\..\bin"
-xcopy /Y /E /S "$(SolutionDir)\MyIconOverlayHandlersAdded\bin\Debug\Newtonsoft.Json.dll" "$(SolutionDir)\..\bin"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
