Use Circus's master branch

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py27,py33,py34,flake8
 
 [testenv]
 commands =
-    pip install git+git://github.com/k4nar/circus.git@onitu
+    pip install git+git://github.com/circus-tent/circus.git
     pip install -e .[tests]
     pip install -e tests/utils/test_driver
     pip install -e drivers/{env:ONITU_TEST_DRIVER:../tests/utils/test_driver}
@@ -16,7 +16,7 @@ commands = flake8 --show-source onitu tests drivers
 [testenv:py27-bench]
 basepython = python2.7
 commands =
-    pip install git+git://github.com/k4nar/circus.git@onitu
+    pip install git+git://github.com/circus-tent/circus.git
     pip install -e .[tests,bench]
     pip install -e tests/utils/test_driver
     py.test tests/benchmarks -v
@@ -24,14 +24,14 @@ commands =
 [testenv:py33-bench]
 basepython = python3.3
 commands =
-    pip install git+git://github.com/k4nar/circus.git@onitu
+    pip install git+git://github.com/circus-tent/circus.git
     pip install -e .[tests,bench]
     pip install -e tests/utils/test_driver
     py.test tests/benchmarks -v
 
 [testenv:benchmarks]
 commands =
-    pip install git+git://github.com/k4nar/circus.git@onitu
+    pip install git+git://github.com/circus-tent/circus.git
     pip install -e .[bench]
     pip install -e tests/utils/test_driver
     python -m tests.benchmarks.benchmarks
