--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# We need some patches so we must use a fork of Circus before they are integrated to the next release
-git+git://github.com/k4nar/circus.git@onitu
+# We need the development version of Circus as 0.12 has not been released yet
+git+git://github.com/circus-tent/circus.git
 
 -e drivers/local_storage/
 -e tests/utils/test_driver/
