Document the velocity option

--- a/docs/examples/manifest.json
+++ b/docs/examples/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Your driver's name",
   "description": "The description of your driver.",
+  "velocity": 0.6,
   "options": {
     "my_option": {
       "name": "Option's name",
