Add velocity to the drivers' manifests

--- a/drivers/amazon_s3/manifest.json
+++ b/drivers/amazon_s3/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Amazon S3",
   "description": "Driver to synchronize files with an AWS S3 bucket.",
+  "velocity": 0.6,
   "options": {
     "bucket": {
       "name": "S3 Bucket",
